# BERsim

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  master_server.py  plot_results.py  requirements.txt  simulator.cpp  slave_worker.py  smart_scheduler.py
